# vogl

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  default.nix  shell.nix
qtcreator/: CMakeLists.txt  qtcreator.md
src/: CMakeLists.txt  build_options.cmake
src/OGLSamples_GTruc/: CMakeLists.txt  readme.txt
src/OGLSamples_GTruc/data/: array.dds  cube.dds  cube.ktx  kueken1-ati1n.dds  kueken1-ati2n.dds  kueken1-bgr8.dds  kueken1-bgr8.ktx  kueken1-dxt1.dds  kueken1-dxt5.dds  kueken1-rgb10a2.dds  kueken2-bc4.dds  kueken2-bc5.dds  kueken2-bc7.dds  kueken2-bgra8.dds  kueken2-bgra8.ktx  kueken2-dxt1.dds  kueken2-dxt5.dds  kueken3-bgr8.dds  kueken3-bgr8.ktx  kueken4-dxt1.dds  sky128.dds
src/OGLSamples_GTruc/samples/: CMakeLists.txt  es-200-draw-elements.cpp  gl-210-draw-elements.cpp  gl-210-draw-range.cpp  gl-300-fbo-multisample.cpp  gl-300-test-alpha.cpp  gl-320-buffer-uniform-shared.cpp  gl-320-buffer-uniform.cpp  gl-320-buffer-update.cpp  gl-320-draw-base-vertex.cpp  gl-320-draw-image-space.cpp  gl-320-draw-instanced.cpp  gl-320-draw-multiple.cpp  gl-320-draw-without-vertex-attrib.cpp  gl-320-fbo-blit.cpp  gl-320-fbo-depth-multisample.cpp  gl-320-fbo-depth.cpp  gl-320-fbo-layered.cpp  gl-320-fbo-multisample-explicit.cpp  gl-320-fbo-multisample-integer.cpp  gl-320-fbo-multisample.cpp  (+135 more)
src/OGLSuperBible/: CMakeLists.txt  readme.txt
src/chromiumlib/: readme.txt
src/common/: SimpleOpt.h  channel.cpp  channel.h  channelmgr.cpp  commands.h  launchsteamgame.cpp  launchsteamgame.h  listfiles.cpp  listfiles.h  mtqueue.cpp  mtqueue.h  pinggame.cpp  pinggame.h  portmgr.cpp  portmgr.h  toclientmsg.cpp  toclientmsg.h  vogllogging.h
src/gltests/: CMakeLists.txt
src/glxspheres/: CMakeLists.txt  glxspheres.c
src/ktxtool/: CMakeLists.txt  ktxtool.cpp
src/libbacktrace/: CMakeLists.txt  alloc.c  btrace.cpp  btrace.h  dwarf.c  elf.c  fileline.c
src/libbacktrace_test/: CMakeLists.txt  libbacktrace_test.cpp  mainlib.cpp
src/libtelemetry/: CMakeLists.txt  libtelemetry.cpp  libtelemetry.h  linker-script.txt
src/lldbgdb/: gdbmode.lldb  gdbmode.py  readme.txt  utils.py
src/server/: CMakeLists.txt
src/voglbench/: CMakeLists.txt  voglbench.cpp  voglbench.h
src/voglcmd/: CMakeLists.txt  trace.cpp  voglcmd.cpp
src/voglcommon/: CMakeLists.txt  gl_buffer_bindings.inc  gl_gets.inc  gl_pname_defs.h  gl_types.cpp  gl_types.h  vogl_arb_program_state.cpp  vogl_arb_program_state.h  vogl_blob_manager.cpp  vogl_blob_manager.h  vogl_buffer_state.cpp  vogl_buffer_state.h  vogl_client_side_array_descs.inc  vogl_common.cpp  vogl_common.h  vogl_context_info.cpp  vogl_context_info.h  vogl_ctypes.cpp  vogl_ctypes.h  vogl_current_vertex_attrib_state.cpp  vogl_current_vertex_attrib_state.h  vogl_default_framebuffer_state.cpp  vogl_default_framebuffer_state.h  vogl_display_list_state.cpp  vogl_display_list_state.h  vogl_entrypoints.cpp  vogl_entrypoints.h  vogl_fbo_state.cpp  vogl_fbo_state.h  vogl_framebuffer_capturer.cpp  vogl_framebuffer_capturer.h  vogl_fs_preprocessor.cpp  vogl_fs_preprocessor.h  vogl_general_context_state.cpp  vogl_general_context_state.h  vogl_gl_object.cpp  vogl_gl_object.h  vogl_gl_replayer.cpp  vogl_gl_replayer.h  vogl_gl_state_snapshot.cpp  (+51 more)
src/voglcore/: CMakeLists.txt  dds_defs.h  gdb-dumpers.py  lzma_7zBuf.cpp  lzma_7zBuf.h  lzma_7zBuf2.cpp  lzma_7zCrc.cpp  lzma_7zCrc.h  lzma_7zFile.cpp  lzma_7zFile.h  lzma_7zStream.cpp  lzma_7zVersion.h  lzma_Alloc.cpp  lzma_Alloc.h  lzma_Bcj2.cpp  lzma_Bcj2.h  lzma_Bra.cpp  lzma_Bra.h  lzma_Bra86.cpp  lzma_BraIA64.cpp  lzma_CpuArch.h  lzma_LzFind.cpp  lzma_LzFind.h  lzma_LzFindMt.cpp  lzma_LzFindMt.h  lzma_LzHash.h  lzma_LzmaDec.cpp  lzma_LzmaDec.h  lzma_LzmaEnc.cpp  lzma_LzmaEnc.h  lzma_LzmaLib.cpp  lzma_LzmaLib.h  lzma_MyVersion.h  lzma_Threads.cpp  lzma_Threads.h  lzma_Types.h  rmalloc.c  rmalloc.h  stb_malloc.cpp  stb_malloc.h  (+159 more)
src/vogleditor/: CMakeLists.txt  fix_x11.h  main.cpp  vogleditor.cpp  vogleditor.h  vogleditor.ui  vogleditor.ui.autosave  vogleditor_apicallitem.h  vogleditor_apicalltimelinemodel.cpp  vogleditor_apicalltimelinemodel.h  vogleditor_apicalltreeitem.cpp  vogleditor_apicalltreeitem.h  vogleditor_frameitem.h  vogleditor_gl_state_snapshot.cpp  vogleditor_gl_state_snapshot.h  vogleditor_groupitem.h  vogleditor_output.cpp  vogleditor_output.h  vogleditor_qapicalltreemodel.cpp  vogleditor_qapicalltreemodel.h  vogleditor_qbufferexplorer.cpp  vogleditor_qbufferexplorer.h  vogleditor_qbufferexplorer.ui  vogleditor_qdumpdialog.cpp  vogleditor_qdumpdialog.h  vogleditor_qdumpdialog.ui  vogleditor_qframebufferexplorer.cpp  vogleditor_qframebufferexplorer.h  vogleditor_qframebufferexplorer.ui  vogleditor_qlaunchtracerdialog.cpp  vogleditor_qlaunchtracerdialog.h  vogleditor_qlaunchtracerdialog.ui  vogleditor_qprogramarbexplorer.cpp  vogleditor_qprogramarbexplorer.h  vogleditor_qprogramarbexplorer.ui  vogleditor_qprogramexplorer.cpp  vogleditor_qprogramexplorer.h  vogleditor_qprogramexplorer.ui  vogleditor_qsettings.cpp  vogleditor_qsettings.h  (+78 more)
src/voglgen/: CMakeLists.txt  create_nv_exports.sh  voglgen.cpp
src/voglinc/: gl_glx_ctypes.inc  gl_glx_ctypes_ptr_to_pointee.inc  gl_glx_custom_func_handler_validator.inc  gl_glx_func_descs.inc  gl_glx_replay_helper_macros.inc  glx_enums.inc  glx_ext_desc.inc
src/voglreplay/: .replay_tool_syms.cpp.swp  CMakeLists.txt  master_todo_list.txt  replay_tool_compare_hash.cpp  replay_tool_dump.cpp  replay_tool_find.cpp  replay_tool_info.cpp  replay_tool_json.cpp  replay_tool_parse.cpp  replay_tool_replay.cpp  replay_tool_syms.cpp  replay_tool_trace.cpp  vogl_remote.cpp  vogl_remote.h  vogl_replay_tool.cpp  vogl_replay_tool.h
src/voglserver/: CMakeLists.txt  server.cpp
src/voglsyms/: CMakeLists.txt  voglsyms.cpp  voglsyms.h
src/vogltest/: CMakeLists.txt  glfuncs.h  voglcoretest.cpp  vogltest.cpp
src/vogltrace/: CMakeLists.txt  libvogltrace_framework_plist.txt  libvogltrace_linker_script.txt  vogl_cmdline_opts.h  vogl_intercept.cpp  vogl_intercept.h  vogl_remote.cpp  vogl_remote.h  vogl_trace.cpp  vogl_trace.h  vogl_trace_x64.def  vogl_trace_x86.def
(+835 files in other folders)
